# fastapi-aiogram3-template

./: .env.dev  README.md  alembic.ini  app.py  pyproject.toml
core/config/: bot.py  db.py  proj_settings.py
core/db/: db_helper.py  uow.py
core/db/models/: config_models.py
core/shared/: base_dto.py  models.py  repository_dependencies.py
migrations/: base.py  env.py
src/admin/: __init__.py  views.py
src/api/: routers.py
src/api/controllers/: start.py
src/bot/: routers.py
src/bot/handlers/: start.py
src/web/: routers.py
