[tool.poetry]
name = "fastapi-aiogram3-template"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["EnotShow <enotshow275@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
environs = "^10.3.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqladmin = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
